[package]
name = "link"
version = "0.1.0"
authors = ["ZiruiOu <1800012945@pku.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", version = "0.1.0" }
pnet = { version = "0.27.2" }
pcap = { version = "0.9", features = ["capture-stream"] }
